osh/openstack/06-keystone/manifests/keystone/templates/service-ingress-api.yaml
---
# Source: keystone/templates/service-ingress-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: keystone
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: ingress-api
