osh/openstack/06-keystone/manifests/keystone/templates/ingress-api.yaml
---
# Source: keystone/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keystone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: keystone-trinity.pbandark.com
spec:
  ingressClassName: "nginx"
  rules:
    - host: keystone
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keystone-api
                port:
                  name: "ks-pub"
    - host: keystone.openstack
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keystone-api
                port:
                  name: "ks-pub"
    - host: keystone.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keystone-api
                port:
                  name: "ks-pub"
---
# Source: keystone/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keystone-namespace-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: keystone-trinity.pbandark.com
spec:
  ingressClassName: "nginx"
  rules:
    - host: keystone-trinity.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keystone-api
                port:
                  name: "ks-pub"
---
# Source: keystone/templates/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keystone-cluster-fqdn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-alias: keystone-trinity.pbandark.com
spec:
  ingressClassName: "rackspace-nginx"
  rules:
    - host: keystone-trinity.pbandark.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: keystone-api
                port:
                  name: "ks-pub"
